<resources>
    <string name="app_name" translatable="false">Findroid</string>
    <string name="app_description">Third-party native Jellyfin app</string>
    <string name="jellyfin_banner">Jellyfin banner</string>
    <string name="add_server">Add server</string>
    <string name="add_server_error_outdated">Server version outdated: %1$s. Please update your server</string>
    <string name="add_server_error_not_jellyfin">Not a Jellyfin server: %1$s</string>
    <string name="add_server_error_version">Unsupported server version: %1$s. Please update your server</string>
    <string name="add_server_error_slow">Server is too slow to respond: %1$s</string>
    <string name="add_server_error_empty_address">Empty server address</string>
    <string name="add_server_error_not_found">Server not found</string>
    <string name="add_server_error_no_id">Server has no id, something seems to be wrong with the server</string>
    <string name="login">Login</string>
    <string name="login_error_wrong_username_password">Wrong username or password</string>
    <string name="select_server">Select server</string>
    <string name="edit_text_server_address_hint">Server address</string>
    <string name="edit_text_username_hint">Username</string>
    <string name="edit_text_password_hint">Password</string>
    <string name="button_connect">Connect</string>
    <string name="button_login">Login</string>
    <string name="remove_server">Remove server</string>
    <string name="remove_server_dialog_text">Are you sure you want to remove the server %1$s</string>
    <string name="remove_user">Remove user</string>
    <string name="remove_user_dialog_text">Are you sure you want to remove the user %1$s</string>
    <string name="remove_server_address">Remove server address</string>
    <string name="remove_server_address_dialog_text">Are you sure you want to remove the server address %1$s</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="title_home">Home</string>
    <string name="title_media">My media</string>
    <string name="title_favorite">Favorites</string>
    <string name="title_settings">Settings</string>
    <string name="title_download">Downloads</string>
    <string name="view_all">View all</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="retry">Retry</string>
    <string name="genres">Genres</string>
    <string name="director">Director</string>
    <string name="writers">Writers</string>
    <string name="cast_amp_crew"><![CDATA[Cast & Crew]]></string>
    <string name="seasons">Seasons</string>
    <string name="play_button_description">Play the media</string>
    <string name="trailer_button_description">Watch the trailer</string>
    <string name="check_button_description">Mark as watched or unwatched</string>
    <string name="favorite_button_description">Favorite</string>
    <string name="episode_watched_indicator">Episode watched indicator</string>
    <string name="downloaded_indicator">Downloaded indicator</string>
    <string name="episode_name">%1$d. %2$s</string>
    <string name="episode_name_with_end">%1$d-%2$d. %3$s</string>
    <string name="episode_name_extended">S%1$d:E%2$d - %3$s</string>
    <string name="episode_name_extended_with_end">S%1$d:E%2$d-%3$d - %4$s</string>
    <string name="next_up">Next Up</string>
    <string name="continue_watching">Continue Watching</string>
    <string name="latest_library">Latest %1$s</string>
    <string name="libraries">Libraries</string>
    <string name="series_poster">Series poster</string>
    <string name="collection_no_media">This collection does not contain any media</string>
    <string name="no_favorites">You have no favorites</string>
    <string name="no_downloads">You have nothing downloaded</string>
    <string name="search">Search</string>
    <string name="no_search_results">No search results</string>
    <string name="settings_category_language">Language</string>
    <string name="settings_preferred_audio_language">Preferred audio language</string>
    <string name="settings_preferred_subtitle_language">Preferred subtitle language</string>
    <string name="app_language">App language</string>
    <string name="settings_category_servers">Servers</string>
    <string name="settings_category_player">Player</string>
    <string name="settings_category_download">Downloads</string>
    <string name="settings_category_appearance">Appearance</string>
    <string name="device_name">Device name</string>
    <string name="settings_category_device">Device</string>
    <string name="settings_category_cache">Cache</string>
    <string name="settings_use_cache_title">Cache images</string>
    <string name="settings_use_cache_summary">Cache images on disk to speed up loading times. Will take effect after app restart.</string>
    <string name="settings_cache_size">Cache size (MB)</string>
    <string name="settings_cache_size_message">App will use this amount of MB of your disk space to store images from Jellyfin server. Larger values might be beneficial on slower networks.</string>
    <string name="theme">Theme</string>
    <string name="error_preparing_player_items">Error preparing player items.</string>
    <string name="view_details">View details</string>
    <string name="view_details_underlined"><u>View details</u></string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="app_info">App info</string>
    <string name="unknown_error">Unknown error</string>
  	<string name="search_hint">Search movies, shows, episodes…</string>
    <string name="mpv_player">mpv player</string>
    <string name="download_mobile_data">Download using mobile data</string>
    <string name="download_roaming">Download when roaming</string>
    <string name="mpv_player_summary">Use the experimental mpv player to play videos. mpv has support for more video, audio and subtitle codecs.</string>
    <string name="download_button_description">Download</string>
    <string name="person_detail_title">Details</string>
    <string name="movies_label">Movies</string>
    <string name="shows_label">TV Shows</string>
    <string name="episodes_label">Episodes</string>
    <string name="hide">Hide</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_order">Sort order</string>
    <string name="close">Close</string>
    <string name="share">Share</string>
    <string name="image_description_poster">%1$s poster</string>
    <string name="image_description_backdrop">%1$s backdrop</string>
    <string name="gestures">Gestures</string>
    <string name="player_gestures">Player gestures</string>
    <string name="player_gestures_vb">Volume and brightness gestures</string>
    <string name="player_gestures_zoom">Zoom gesture</string>
    <string name="player_gestures_seek">Seek gesture</string>
    <string name="player_gestures_chapter_skip">Chapter gesture</string>
    <string name="player_gestures_vb_summary">Swipe up and down on the right side of the screen to change the volume and on the left side to change the brightness</string>
    <string name="player_gestures_zoom_summary">Pinch to fill the screen with the video</string>
    <string name="player_gestures_chapter_skip_summary">Long press on Left / Right side to skip chapters (overrides 2x speed gesture)</string>
    <string name="player_gestures_seek_summary">Swipe horizontally to seek forwards or backwards</string>
    <string name="player_brightness_remember">Remember brightness level</string>
    <string name="player_start_maximized">Start maximized</string>
    <string name="player_start_maximized_summary">Open video in maximized mode by default</string>
    <string name="sort_by_options_0">Title</string>
    <string name="sort_by_options_1">IMDB Rating</string>
    <string name="sort_by_options_2">Parental Rating</string>
    <string name="sort_by_options_3">Date Added</string>
    <string name="sort_by_options_4">Date Played</string>
    <string name="sort_by_options_5">Release Date</string>
    <string name="sort_by_options_6">Random</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="runtime_minutes">%1$d mins</string>
    <string name="select_video_version_title">Select version</string>
    <string name="track_selection">[%1$s] %2$s (%3$s)</string>
    <string name="seeking">Seeking</string>
    <string name="seek_back_increment">Seek back increment (ms)</string>
    <string name="seek_forward_increment">Seek forward increment (ms)</string>
    <string name="dynamic_colors">Dynamic colors</string>
    <string name="dynamic_colors_summary">Use Material You Dynamic colors (only available on Android 12+)</string>
    <string name="amoled_theme">AMOLED dark theme</string>
    <string name="amoled_theme_summary">Use AMOLED theme with a pure black background</string>
    <string name="subtitles">Subtitles</string>
    <string name="subtitles_summary">Customize subtitles appearance</string>
    <string name="theme_system">Follow system</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="settings_category_network">Network</string>
    <string name="settings_request_timeout">Request timeout (ms)</string>
    <string name="settings_connect_timeout">Connect timeout (ms)</string>
    <string name="settings_socket_timeout">Socket timeout (ms)</string>
    <string name="users">Users</string>
    <string name="add_user">Add user</string>
    <string name="pref_player_mpv_hwdec">Hardware decoding</string>
    <string name="pref_player_mpv_vo">Video output</string>
    <string name="pref_player_mpv_ao">Audio output</string>
    <string name="pref_player_media_segments">Media Segments</string>
    <string name="pref_player_media_segments_skip_button">Show skip button</string>
    <string name="pref_player_media_segments_skip_button_summary">Provide a button to easily skip parts</string>
    <string name="pref_player_media_segments_skip_button_type">Segment type to display the skip button</string>
    <string name="pref_player_media_segments_skip_button_duration">Seconds to display the skip button</string>
    <string name="pref_player_media_segments_auto_skip">Auto skip</string>
    <string name="pref_player_media_segments_auto_skip_type">Segment type to auto skip</string>
    <string name="pref_player_media_segments_next_episode_threshold">Skip to next episode threshold (ms)</string>
    <string name="media_segments_auto_skip_never">never</string>
    <string name="media_segments_auto_skip_pip">only in pip mode</string>
    <string name="media_segments_auto_skip_always">always</string>
    <string name="media_segments_type_unknown">Others</string>
    <string name="pref_player_trickplay">Trickplay</string>
    <string name="pref_player_trickplay_summary">Display preview images while scrubbing</string>
    <string name="pref_player_chapter_markers">Chapter markers</string>
    <string name="pref_player_chapter_markers_summary">Display chapter markers on the timebar</string>
    <string name="addresses">Addresses</string>
    <string name="picture_in_picture">Picture-in-picture</string>
    <string name="picture_in_picture_gesture">Picture-in-picture home gesture</string>
    <string name="picture_in_picture_gesture_summary">Use home button or gesture to enter picture-in-picture while the video is playing</string>
    <string name="extra_info">Display Extra Info</string>
    <string name="extra_info_summary">Displays detailed information about Audio, Video and Subtitles</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="pref_player_gestures_seek_trickplay">Trickplay on seek gesture</string>
    <string name="pref_player_gestures_seek_trickplay_summary">Display preview images on seek gesture</string>
    <string name="trickplay">Trickplay</string>
</resources>