<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        app:key="pref_player_subtitles"
        app:summary="@string/subtitles_summary"
        app:title="@string/subtitles" />

    <PreferenceCategory app:title="@string/mpv_player">
        <SwitchPreferenceCompat
            app:key="pref_player_mpv"
            app:summary="@string/mpv_player_summary"
            app:title="@string/mpv_player" />
        <ListPreference
            app:defaultValue="mediacodec"
            app:dependency="pref_player_mpv"
            app:entries="@array/mpv_hwdec"
            app:entryValues="@array/mpv_hwdec"
            app:key="pref_player_mpv_hwdec"
            app:title="@string/pref_player_mpv_hwdec"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="gpu-next"
            app:dependency="pref_player_mpv"
            app:entries="@array/mpv_vos"
            app:entryValues="@array/mpv_vos"
            app:key="pref_player_mpv_vo"
            app:title="@string/pref_player_mpv_vo"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="audiotrack"
            app:dependency="pref_player_mpv"
            app:entries="@array/mpv_aos"
            app:entryValues="@array/mpv_aos"
            app:key="pref_player_mpv_ao"
            app:title="@string/pref_player_mpv_ao"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/gestures">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="pref_player_gestures"
            app:title="@string/player_gestures" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:dependency="pref_player_gestures"
            app:key="pref_player_gestures_vb"
            app:summary="@string/player_gestures_vb_summary"
            app:title="@string/player_gestures_vb" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:dependency="pref_player_gestures"
            app:key="pref_player_gestures_zoom"
            app:summary="@string/player_gestures_zoom_summary"
            app:title="@string/player_gestures_zoom" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:dependency="pref_player_gestures"
            app:key="pref_player_gestures_seek"
            app:summary="@string/player_gestures_seek_summary"
            app:title="@string/player_gestures_seek" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:dependency="pref_player_gestures"
            app:key="pref_player_gestures_chapter_skip"
            app:summary="@string/player_gestures_chapter_skip_summary"
            app:title="@string/player_gestures_chapter_skip" />
        <SwitchPreferenceCompat
            app:dependency="pref_player_gestures_vb"
            app:key="pref_player_brightness_remember"
            app:title="@string/player_brightness_remember" />
        <SwitchPreferenceCompat
            app:dependency="pref_player_gestures_zoom"
            app:key="pref_player_start_maximized"
            app:summary="@string/player_start_maximized_summary"
            app:title="@string/player_start_maximized" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/seeking">
        <EditTextPreference
            app:defaultValue="5000"
            app:key="pref_player_seek_back_inc"
            app:title="@string/seek_back_increment"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="15000"
            app:key="pref_player_seek_forward_inc"
            app:title="@string/seek_forward_increment"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <SwitchPreferenceCompat
        app:defaultValue="true"
        app:key="pref_player_chapter_markers"
        app:summary="@string/pref_player_chapter_markers_summary"
        app:title="@string/pref_player_chapter_markers"
        app:widgetLayout="@layout/preference_material3_switch" />

    <PreferenceCategory app:title="@string/pref_player_media_segments">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="pref_player_media_segments_skip_button"
            app:title="@string/pref_player_media_segments_skip_button"
            app:summary="@string/pref_player_media_segments_skip_button_summary"
            app:widgetLayout="@layout/preference_material3_switch" />

        <MultiSelectListPreference
            app:dependency="pref_player_media_segments_skip_button"
            app:key="pref_player_media_segments_skip_button_type"
            app:title="@string/pref_player_media_segments_skip_button_type"
            app:entries="@array/media_segments_type" />

        <EditTextPreference
            app:defaultValue="10"
            app:dependency="pref_player_media_segments_skip_button"
            app:key="pref_player_media_segments_skip_button_duration"
            app:title="@string/pref_player_media_segments_skip_button_duration"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="never"
            app:key="pref_player_media_segments_auto_skip"
            app:title="@string/pref_player_media_segments_auto_skip"
            app:entries="@array/media_segments_auto_skip"
            app:entryValues="@array/media_segments_auto_skip_values"
            app:useSimpleSummaryProvider="true" />

        <MultiSelectListPreference
            app:key="pref_player_media_segments_auto_skip_type"
            app:title="@string/pref_player_media_segments_auto_skip_type"
            app:entries="@array/media_segments_type" />

        <EditTextPreference
            app:defaultValue="5000"
            app:key="pref_player_media_segments_next_episode_threshold"
            app:title="@string/media_segments_next_episode_threshold"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/trickplay">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="pref_player_trickplay"
            app:summary="@string/pref_player_trickplay_summary"
            app:title="@string/pref_player_trickplay" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:dependency="pref_player_gestures_seek"
            app:key="pref_player_gestures_seek_trickplay"
            app:summary="@string/pref_player_gestures_seek_trickplay_summary"
            app:title="@string/pref_player_gestures_seek_trickplay" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/picture_in_picture">
        <SwitchPreferenceCompat
            app:key="pref_player_picture_in_picture_gesture"
            app:title="@string/picture_in_picture_gesture"
            app:summary="@string/picture_in_picture_gesture_summary" />
    </PreferenceCategory>
    
</PreferenceScreen>