<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:icon="@drawable/ic_languages"
        app:key="language"
        app:title="@string/settings_category_language" />

    <Preference
        app:icon="@drawable/ic_server"
        app:key="switchServer"
        app:title="@string/settings_category_servers" />

    <Preference
        app:icon="@drawable/ic_user"
        app:key="switchUser"
        app:title="@string/users" />

    <Preference
        app:icon="@drawable/ic_globe"
        app:key="switchAddress"
        app:title="@string/addresses" />

    <Preference
        app:icon="@drawable/ic_palette"
        app:key="appearance"
        app:title="@string/settings_category_appearance" />

    <Preference
        app:icon="@drawable/ic_download"
        app:key="downloads"
        app:title="@string/settings_category_download" />

    <Preference
        app:icon="@drawable/ic_play"
        app:key="player"
        app:title="@string/settings_category_player" />

    <Preference
        app:icon="@drawable/ic_smartphone"
        app:key="device"
        app:title="@string/settings_category_device" />

    <Preference
        app:icon="@drawable/ic_network"
        app:key="network"
        app:title="@string/settings_category_network" />

    <Preference app:title="@string/settings_category_cache" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        app:key="pref_offline_mode"
        app:title="@string/offline_mode" />

    <PreferenceCategory app:title="@string/about">

        <Preference
            app:key="privacyPolicy"
            app:title="@string/privacy_policy" />

        <Preference
            app:key="appInfo"
            app:title="@string/app_info" />

    </PreferenceCategory>

</PreferenceScreen>