<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        app:icon="@drawable/ic_languages"
        app:isPreferenceVisible="false"
        app:key="pref_app_language"
        app:title="@string/app_language" />

    <ListPreference
        app:defaultValue="null"
        app:entries="@array/languages"
        app:entryValues="@array/languages_values"
        app:icon="@drawable/ic_speaker"
        app:key="pref_audio_language"
        app:title="@string/settings_preferred_audio_language"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        app:defaultValue="null"
        app:entries="@array/languages"
        app:entryValues="@array/languages_values"
        app:icon="@drawable/ic_closed_caption"
        app:key="pref_subtitle_language"
        app:title="@string/settings_preferred_subtitle_language"
        app:useSimpleSummaryProvider="true" />
</PreferenceScreen>