<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        app:defaultValue="30000"
        app:key="pref_network_request_timeout"
        app:title="@string/settings_request_timeout"
        app:useSimpleSummaryProvider="true" />
    <EditTextPreference
        app:defaultValue="6000"
        app:key="pref_network_connect_timeout"
        app:title="@string/settings_connect_timeout"
        app:useSimpleSummaryProvider="true" />
    <EditTextPreference
        app:defaultValue="10000"
        app:key="pref_network_socket_timeout"
        app:title="@string/settings_socket_timeout"
        app:useSimpleSummaryProvider="true" />
    <ListPreference
        app:defaultValue="h264"
        app:key="pref_network_codec"
        app:title="@string/settings_quality_codec"
        app:useSimpleSummaryProvider="true"
        app:entries="@array/codecs"
        app:entryValues="@array/codecs" />
</PreferenceScreen>